Fix download button alignment and normalize text

--- a/stylesheets/page-content.scss
+++ b/stylesheets/page-content.scss
@@ -30,8 +30,10 @@
     margin: 5px 0 5px !important;
 }
 
-.download-button-small {
-    margin: 0 6px;
+.stacked-download-button {
+    margin-top: 7px;
+    margin-left: 15px;
+    margin-right: 15px;
 }
 
 .dark-bg {
